# sru-queryer

./: .gitignore  LICENSE  pyproject.toml  readme-dev.md  readme.md  requirements.txt
src/sru_queryer/: __init__.py  cql.py  drivers.py  exceptions.py  sru.py
src/sru_queryer/_base/: _cql_boolean_operators.py  _cql_literal.py  _cql_modifiers.py  _drivers.py  _exceptions.py  _query.py  _raw_cql.py  _search_clause.py  _sort_key.py  (+10 more)
tests/: test_cql_boolean_operators.py  test_cql_literal.py  test_cql_modifiers.py  test_raw_cql.py  test_search_clause.py  test_search_index_config.py  test_search_retrieve.py  test_sort_key.py  test_sru_aux_formatter.py  test_sru_configuration.py  test_sru_explain_auto_parser.py  test_sru_explain_dict_parser.py  test_sru_explain_xml_parser.py  test_sru_query.py  test_sru_queryer.py  test_sru_util.py  test_sru_validator.py
tests/testData/: 1_1_query_dict.json  1_2_query_dict.json  1_2_query_dict_minimal.json  1_2_query_dict_no_raw.json  1_2_query_dict_raw_cql.json  1_2_query_dict_search_clause.json  alma_available_context_sets_and_indexes.json  alma_bad_explain_response.xml  alma_explain_response.xml  alma_raw_config_info.json  alma_raw_indexes.json  alma_raw_schemas.json  explain_response_namespaced.xml  gapines_available_context_sets_and_indexes.json  gapines_explain_response.xml  gapines_html_response.html  gapines_raw_config_info.json  gapines_raw_indexes.json  loc_available_context_sets_and_indexes.json  loc_bad_explain_response.xml  loc_explain_response.xml  loc_raw_indexes.json  loc_raw_schemas.json  sru_no_schema.xml  test_data.py
