[project]
name = "sru-queryer"
version = "1.0.3"
description = "A utility for integrating SRU queries into your applications."
readme = "readme.md"
requires-python = ">=3.7.17"
keywords = ["sru", "library", "api"]

authors = [
    {name = "Erik Jones", email = "ejones99@umd.edu"},
]

maintainers = [
    {name = "USMAI", email = "libclas@umd.edu"},
]

classifiers = ["Programming Language :: Python :: 3", "Development Status :: 5 - Production/Stable"]

dependencies = ["requests>=2.27.1", "xmltodict>=0.13.0"]
