[project]
name = "sru-queryer"
version = "2.1.3"
description = "A utility for integrating SRU queries into your applications."
readme = "readme.md"
requires-python = ">=3.7"
keywords = ["sru", "library", "api"]

authors = [
    {name = "Erik Jones", email = "ejones99@umd.edu"},
]

maintainers = [
    {name = "USMAI", email = "libclas@umd.edu"},
]

classifiers = ["Programming Language :: Python :: 3", "Development Status :: 5 - Production/Stable", "License :: OSI Approved :: Apache Software License"]

dependencies = ["requests>=2.27.1,<3.0", "xmltodict>=0.14.0,<0.15"]
